# cookiecutter-python-cli-poetry

./: .editorconfig  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cookiecutter.json  docker-compose.yml  pyproject.toml  setup.cfg
.config/: mypy
.devcontainer/: devcontainer.json  docker-compose.yml
docker/: Dockerfile
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .pre-commit-config.yaml  Makefile  docker-compose.yml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json  docker-compose.yml
{{cookiecutter.project_slug}}/.envs/: .app  .mysql
{{cookiecutter.project_slug}}/docker/: Dockerfile
{{cookiecutter.project_slug}}/docker/app/: Dockerfile
{{cookiecutter.project_slug}}/docker/mysql/: Dockerfile
{{cookiecutter.project_slug}}/docker/mysql/conf.d/: my.cnf
{{cookiecutter.project_slug}}/docker/mysql/docker-entrypoint-initdb.d/: 001_create_db.sql
{{cookiecutter.project_slug}}/notebooks/: quick-start.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: __init__.py  app.py  cli.py
{{cookiecutter.project_slug}}/tests/{{cookiecutter.module_name}}/: test_sample.py
